--- a/game.html
+++ b/game.html
@@ -35,6 +35,10 @@
         <a href="game.html" id="tb-pic">
             <img id="tb-name" src="assets/play.png" alt="">
         </a>
+        
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
     </div>
 
     <div class="popup" id="popup">
@@ -45,10 +49,34 @@
         <img src="assets/logo.png"/>
     </div>
 
+    <div class="gmobile">
+        <h1><i class='fas fa-desktop'></i></h1>
+        <p>Try NinjaNFT on desktop</p>
+    </div>
+
     <div class="styl" id="styl">
         <p>Game</p>
         <h1>COMING SOON</h1>
         <p id="p2">Click ⬆⬇➡⬅ to move</p>
+    </div>
+
+    <div class="footer">
+        <div class="ft">
+            <img src="assets/name.png" alt="">
+        </div>
+
+        <div class="ft" id="play">
+            <a href="game.html"><img src="assets/play.png" alt=""></a>
+        </div>
+
+        <div class="ft">
+            <h1 style='font-family: "Audiowide", sans-serif;'>Social</h1>
+            <a href="">Twitter</a>
+            <a href="">Telegram</a>
+            <p></p>
+            <p></p>
+            <a href="">WhitePaper</a>
+        </div>
     </div>
     <canvas id="myCanvas" width="1300" height="700" style="border:1px solid #000000;" />   
 
