--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
 
     <div class="gamesoon">
         <a href="game.html"><img src="assets/play.png" alt=""></a>
-        <img id="soon" src="assets/soon.png" alt="">
     </div>
 
     <div class="store">
@@ -165,6 +164,25 @@
         <div class="r-cntn">
             <h1 style='font-family: "Audiowide", sans-serif;'>About NinjaNFT</h1>
             <p>NinjaNFT is not just a game for traditional blockchain users , but a way to introduce blockchain to gamers . With NinjaNFT , players can own and monetize their gaming experiences on the Binance Smart Chain using FPokeCoin , the platform's utility token . The In - game NFTs in NinjaNFT is not the usual " Collectible art " NFTs common in Crypto today . Instead , they are usable and functional NFTs that can be inserted into the NinjaNFT Game Framework</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="ft">
+            <img src="assets/name.png" alt="">
+        </div>
+
+        <div class="ft" id="play">
+            <a href="game.html"><img src="assets/play.png" alt=""></a>
+        </div>
+
+        <div class="ft">
+            <h1 style='font-family: "Audiowide", sans-serif;'>Social</h1>
+            <a href="">Twitter</a>
+            <a href="">Telegram</a>
+            <p></p>
+            <p></p>
+            <a href="">WhitePaper</a>
         </div>
     </div>
     
