--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
 
             <div class="str-box">
-                <img src="assets/ninja3.png" alt="">
+                <img src="assets/ninja3.PNG" alt="">
                 <h1>Lorem Ipsum</h1>
                 <p id="el">Element: Water</p>
                 <p id="status">Rare</p>
@@ -132,7 +132,7 @@
             </div>
 
             <div class="str-box">
-                <img src="assets/ninja4.png" alt="">
+                <img src="assets/ninja4.PNG" alt="">
                 <h1>Lorem Ipsum</h1>
                 <p id="el">Element: Fire</p>
                 <p id="status">Rare</p>
