--- a/game.html
+++ b/game.html
@@ -42,10 +42,10 @@
     </div>
 
     <div class="popup" id="popup">
+        <a href="index.html">Home</a>
+        <a href="https://twitter.com/">Twitter</a>
         
-        <a href="https://twitter.com/legendadaofc?s=08">Twitter</a>
-        
-        <a href="https://t.me/legendadaofficial">Telegram</a>
+        <a href="https://t.me/">Telegram</a>
         <img src="assets/logo.png"/>
     </div>
 
