--- a/game.html
+++ b/game.html
@@ -55,12 +55,10 @@
     </div>
 
     <div class="styl" id="styl">
-        <p>Game</p>
-        <h1>COMING SOON</h1>
-        <p id="p2">Click ⬆⬇➡⬅ to move</p>
+        <h1>Click ⬆⬇➡⬅ to move</h1>
     </div>
 
-    <div class="footer">
+    <!-- <div class="footer">
         <div class="ft">
             <img src="assets/name.png" alt="">
         </div>
@@ -77,7 +75,7 @@
             <p></p>
             <a href="">WhitePaper</a>
         </div>
-    </div>
+    </div> -->
     <canvas id="myCanvas" width="1300" height="700" style="border:1px solid #000000;" />   
 
     <img id="testpic" src="assets/ninja.png" style="display: none;">
