--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
 
     <div class="popup" id="popup">
         <a href="index.html">Home</a>
-        <a href="https://twitter.com/">Twitter</a>
+        <a href="https://twitter.com/ninjanfts?t=5TXnTgrIPV7TskY9clGklw&s=08">Twitter</a>
         
-        <a href="https://t.me/">Telegram</a>
+        <a href="https://t.me/ninjanfts">Telegram</a>
+        <a href="">Medium</a>
+        <a href="">Reddit</a>
         <img src="assets/logo.png"/>
     </div>
 
@@ -58,7 +60,7 @@
             <h1 style='font-family: "Audiowide", sans-serif;'>What is NinjaNTF?</h1>
             <p>Role-playing Game or commonly abbreviated as RPG is a game where we will 'become' the character itself, playing in a story in a game designed in such a way that we will not get bored. , unfortunately it became increasingly clear that the players wanted a game that resonated with their childhood memories . Actions from the developer made the game too easy to beat, gradually making old and even newer players stop playing. NinjaNTF was created with the mission of bridging new and old fans of RPGs, NinjaNTF on Binance Smart Chain is a blockchain-based online game where you can collect, trade, and even fight against NPCs or other players to become the best.</p>
         </div>
-        <a href="" id="cntn-btn">JOIN TELEGRAM</a>
+        <a href="https://t.me/ninjanfts" id="cntn-btn">JOIN TELEGRAM</a>
     </div>
 
     
@@ -124,7 +126,7 @@
             </div>
 
             <div class="str-box">
-                <img src="assets/ninja3.PNG" alt="">
+                <img src="assets/ninja3.png" alt="">
                 <h1>Lorem Ipsum</h1>
                 <p id="el">Element: Water</p>
                 <p id="status">Rare</p>
@@ -132,7 +134,7 @@
             </div>
 
             <div class="str-box">
-                <img src="assets/ninja4.PNG" alt="">
+                <img src="assets/ninja4.png" alt="">
                 <h1>Lorem Ipsum</h1>
                 <p id="el">Element: Fire</p>
                 <p id="status">Rare</p>
@@ -178,8 +180,10 @@
 
         <div class="ft">
             <h1 style='font-family: "Audiowide", sans-serif;'>Social</h1>
-            <a href="">Twitter</a>
-            <a href="">Telegram</a>
+            <a href="https://twitter.com/ninjanfts?t=5TXnTgrIPV7TskY9clGklw&s=08"><i class="fa fa-twitter"></i></a>
+            <a href="https://t.me/ninjanfts"><i class="fa fa-telegram"></i></a>
+            <a href=""><i class='fab fa-medium'></i></a>
+            <a href=""><i class='fab fa-reddit-alien'></i></a>
             <p></p>
             <p></p>
             <a href="">WhitePaper</a>
