--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
         <a href="https://t.me/ninjanfts">Telegram</a>
         <a href="">Medium</a>
-        <a href="">Reddit</a>
+        <a href="https://www.reddit.com/u/Ninjanfts">Reddit</a>
         <img src="assets/logo.png"/>
     </div>
 
@@ -183,7 +183,7 @@
             <a href="https://twitter.com/ninjanfts?t=5TXnTgrIPV7TskY9clGklw&s=08"><i class="fa fa-twitter"></i></a>
             <a href="https://t.me/ninjanfts"><i class="fa fa-telegram"></i></a>
             <a href=""><i class='fab fa-medium'></i></a>
-            <a href=""><i class='fab fa-reddit-alien'></i></a>
+            <a href="https://www.reddit.com/u/Ninjanfts"><i class='fab fa-reddit-alien'></i></a>
             <p></p>
             <p></p>
             <a href="">WhitePaper</a>
