--- a/pvp.html
+++ b/pvp.html
@@ -50,7 +50,7 @@
         
         <a href="https://t.me/ninjanfts">Telegram</a>
         <a href="">Medium</a>
-        <a href="">Reddit</a>
+        <a href="https://www.reddit.com/u/Ninjanfts">Reddit</a>
         <img src="assets/logo.png"/>
     </div>
 
