--- a/game.html
+++ b/game.html
@@ -47,7 +47,7 @@
         
         <a href="https://t.me/ninjanfts">Telegram</a>
         <a href="">Medium</a>
-        <a href="">Reddit</a>
+        <a href="https://www.reddit.com/u/Ninjanfts">Reddit</a>
         <img src="assets/logo.png"/>
     </div>
 
@@ -66,6 +66,7 @@
         </a>
         
     </div>
+
 
     <!-- <div class="footer">
         <div class="ft">
