--- a/pvp.html
+++ b/pvp.html
@@ -49,7 +49,7 @@
         <a href="https://twitter.com/ninjanfts?t=5TXnTgrIPV7TskY9clGklw&s=08">Twitter</a>
         
         <a href="https://t.me/ninjanfts">Telegram</a>
-        <a href="">Medium</a>
+        <a href="https://medium.com/@ninjanfts">Medium</a>
         <a href="https://www.reddit.com/u/Ninjanfts">Reddit</a>
         <img src="assets/logo.png"/>
     </div>
