--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a href="https://twitter.com/ninjanfts?t=5TXnTgrIPV7TskY9clGklw&s=08">Twitter</a>
         
         <a href="https://t.me/ninjanfts">Telegram</a>
-        <a href="">Medium</a>
+        <a href="https://medium.com/@ninjanfts">Medium</a>
         <a href="https://www.reddit.com/u/Ninjanfts">Reddit</a>
         <img src="assets/logo.png"/>
     </div>
@@ -182,7 +182,7 @@
             <h1 style='font-family: "Audiowide", sans-serif;'>Social</h1>
             <a href="https://twitter.com/ninjanfts?t=5TXnTgrIPV7TskY9clGklw&s=08"><i class="fa fa-twitter"></i></a>
             <a href="https://t.me/ninjanfts"><i class="fa fa-telegram"></i></a>
-            <a href=""><i class='fab fa-medium'></i></a>
+            <a href="https://medium.com/@ninjanfts"><i class='fab fa-medium'></i></a>
             <a href="https://www.reddit.com/u/Ninjanfts"><i class='fab fa-reddit-alien'></i></a>
             <p></p>
             <p></p>
