--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <a href="https://www.reddit.com/u/Ninjanfts"><i class='fab fa-reddit-alien'></i></a>
             <p></p>
             <p></p>
-            <a href="NinjaNTF.pdf" download="NinjaNTF.pdf" download id="tb-wp">Whitepaper</a>
+            <a href="NinjaNFT.pdf" download="NinjaNFT.pdf" download id="tb-wp">Whitepaper</a>
         </div>
     </div>
     
