--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="str">
             <div class="str-box">
                 <img src="assets/ninja2.png" alt="">
-                <h1>Lorem Ipsum</h1>
+                <h1>Turtle</h1>
                 <p id="el">Element: Water</p>
                 <p id="status">Normal</p>
                 <a href="">Buy Soon</a>
@@ -127,7 +127,7 @@
 
             <div class="str-box">
                 <img src="assets/ninja3.png" alt="">
-                <h1>Lorem Ipsum</h1>
+                <h1>Kanjuro</h1>
                 <p id="el">Element: Water</p>
                 <p id="status">Rare</p>
                 <a href="">Buy Soon</a>
@@ -135,7 +135,7 @@
 
             <div class="str-box">
                 <img src="assets/ninja4.png" alt="">
-                <h1>Lorem Ipsum</h1>
+                <h1>Kiemon</h1>
                 <p id="el">Element: Fire</p>
                 <p id="status">Rare</p>
                 <a href="">Buy Soon</a>
@@ -143,7 +143,7 @@
 
             <div class="str-box">
                 <img src="assets/ninja5.png" alt="">
-                <h1>Lorem Ipsum</h1>
+                <h1>Inzagi</h1>
                 <p id="el">Element: Lighting</p>
                 <p id="status">Ultra Rare</p>
                 <a href="">Buy Soon</a>
